--- a/info.html
+++ b/info.html
@@ -15,9 +15,9 @@
     <link rel="apple-touch-icon" href="icon.png" />
     <link rel="icon" href="icon.png" type="image/svg+xml" />
 
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
 
     <meta name="theme-color" content="#fafafa" />
   </head>
@@ -55,10 +55,11 @@
       </div>
     </main>
 
-    <script src="js/photos.js"></script>
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/route.js"></script>
+    <script src="/js/photos.js"></script>
+    <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="/js/plugins.js"></script>
+    <script src="/js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
