--- a/fotos.html
+++ b/fotos.html
@@ -41,7 +41,7 @@
           <a href="/index.html" class="link logo"> dafna szleifer </a>
         </div> -->
         <div class="tags">
-          <button class="accordion">filtrar</button>
+          <button class="accordion" id="filters-button">filtrar</button>
 
           <ul class="filters-list">
             <li>
