--- a/fotos.html
+++ b/fotos.html
@@ -25,8 +25,10 @@
   <body>
     <header>
       <div class="logo-wrapper">
-        <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
-        <a href="index.html" class="link logo" id="mobile"> dafna </a>
+        <a href="/index.html" class="link logo" id="desktop">
+          dafna szleifer
+        </a>
+        <a href="/index.html" class="link logo" id="mobile"> dafna </a>
       </div>
       <div class="link azul fotos">
         <a href="#todas"> fotos</a>
@@ -123,7 +125,7 @@
     <div class="flecha"></div>
 
     <footer>
-      <a href="info.html" class="link rojo">info</a>
+      <a href="/info.html" class="link rojo">info</a>
       <a href="#" class="link ingles">EN</a>
     </footer>
 
