--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
       <div class="logo-wrapper">
         <a href="/index.html" class="link logo"> dafna szleifer </a>
       </div>
-      <a href="/catalogo/" class="link azul"> catálogo </a>
+      <a href="/fotos.html" class="link azul"> fotos </a>
     </header>
 
     <main class="main-info">
