no index mientras sea test

--- a/fotos.html
+++ b/fotos.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>fotos | dafna szleifer</title>
+    <!-- SACAR ESTO CUANDO DEJE DE SER UN TEST -->
+    <meta name="robots" content="noindex" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
