--- a/info.html
+++ b/info.html
@@ -2,7 +2,9 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8" />
-    <title>dafna szleifer</title>
+    <title>info | dafna szleifer</title>
+    <!-- SACAR ESTO CUANDO DEJE DE SER UN TEST -->
+    <meta name="robots" content="noindex" />
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
