--- a/fotos.html
+++ b/fotos.html
@@ -49,57 +49,63 @@
 
           <ul class="filters-list">
             <li>
-              <button type="button" class="filter current" data-filter="todas">
-                todas
-              </button>
+              <a href="/fotos" class="filter current" data-filter="todas"
+                >todas</a
+              >
             </li>
 
             <li>
-              <button type="button" class="filter" data-filter="compania">
-                compañía
-              </button>
+              <a href="/fotos/compania" class="filter" data-filter="compania"
+                >compañía</a
+              >
             </li>
 
             <li>
-              <button type="button" class="filter" data-filter="fucsia">
-                fucsia
-              </button>
+              <a href="/fotos/fucsia" class="filter" data-filter="fucsia"
+                >fucsia</a
+              >
             </li>
 
             <li>
-              <button type="button" class="filter" data-filter="perros">
-                perros
-              </button>
+              <a href="/fotos/perros" class="filter" data-filter="perros"
+                >perros</a
+              >
             </li>
 
             <li>
-              <button type="button" class="filter" data-filter="senorxs">
-                señorxs
-              </button>
+              <a href="/fotos/senorxs" class="filter" data-filter="senorxs"
+                >señorxs</a
+              >
             </li>
 
             <li>
-              <button type="button" class="filter" data-filter="balnearias">
-                balnearias
-              </button>
+              <a
+                href="/fotos/balnearias"
+                class="filter"
+                data-filter="balnearias"
+                >balnearias</a
+              >
             </li>
 
             <li>
-              <button type="button" class="filter" data-filter="posiciones">
-                posiciones
-              </button>
+              <a
+                href="/fotos/posiciones"
+                class="filter"
+                data-filter="posiciones"
+                >posiciones</a
+              >
             </li>
 
             <li>
-              <button type="button" class="filter" data-filter="rincones">
-                rincones
-              </button>
+              <a href="/fotos/rincones" class="filter" data-filter="rincones"
+                >rincones</a
+              >
             </li>
 
             <li>
-              <button type="button" class="filter" data-filter="autos">
-                autos
-              </button>
+              <a href="/fotos/autos" class="filter" data-filter="autos"
+                >autos</a
+              >
             </li>
           </ul>
         </div>
