--- a/info.html
+++ b/info.html
@@ -25,7 +25,7 @@
   </head>
 
   <body class="body-info">
-    <div id="main-cursor"></div>
+    <div id="custom-cursor"></div>
 
     <header>
       <div class="logo-wrapper">
