--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <main class="main-home">
-      <div id="main-cursor"></div>
+      <div id="custom-cursor"></div>
       <div class="video-wrapper">
         <video autoplay muted>
           <source src="videos/IMG_0829.MOV" type="video/mp4" />
