--- a/fotos.html
+++ b/fotos.html
@@ -38,7 +38,7 @@
     </header>
 
     <main class="main-fotos">
-      <div id="main-cursor"></div>
+      <div id="custom-cursor"></div>
 
       <div class="filters-nav">
         <!-- <div class="logo-wrapper">
