--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
       ga("set", "transport", "beacon");
       ga("send", "pageview");
     </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <!-- <script src="https://www.google-analytics.com/analytics.js" async></script> -->
   </body>
 </html>
