--- a/info.html
+++ b/info.html
@@ -75,6 +75,6 @@
       ga("set", "transport", "beacon");
       ga("send", "pageview");
     </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
+    <!-- <script src="https://www.google-analytics.com/analytics.js" async></script> -->
   </body>
 </html>
