--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id="custom-cursor"></div>
       <div class="video-wrapper">
         <video autoplay muted>
-          <source src="videos/IMG_0829.MOV" type="video/mp4" />
+          <source src="videos/piloto-rosa.mp4" type="video/mp4" />
         </video>
       </div>
     </main>
