--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
 
     <main class="main-home">
       <div id="custom-cursor"></div>
-      <div class="video-wrapper">
-        <video autoplay muted>
-          <source src="videos/piloto-rosa.mp4" type="video/mp4" />
-        </video>
-      </div>
+      <div class="video-wrapper"></div>
     </main>
 
     <footer>
@@ -49,6 +45,7 @@
 
     <script src="/js/route.js"></script>
     <script src="/js/photos.js"></script>
+    <script src="/js/videos.js"></script>
     <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/js/main.js"></script>
