--- a/info.html
+++ b/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html class="no-js" lang="es">
   <head>
     <meta charset="utf-8" />
     <title>info | dafna szleifer</title>
@@ -59,6 +59,7 @@
 
     <script src="/js/route.js"></script>
     <script src="/js/photos.js"></script>
+    <script src="/js/videos.js"></script>
     <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/js/main.js"></script>
