--- a/info.html
+++ b/info.html
@@ -29,10 +29,10 @@
 
     <header>
       <div class="logo-wrapper">
-        <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
-        <a href="index.html" class="link logo" id="mobile"> dafna </a>
+        <a href="/" class="link logo" id="desktop"> dafna szleifer </a>
+        <a href="/" class="link logo" id="mobile"> dafna </a>
       </div>
-      <a href="fotos.html" class="link azul"> fotos </a>
+      <a href="/fotos" class="link azul"> fotos </a>
     </header>
 
     <main class="main-info">
@@ -57,11 +57,9 @@
       </div>
     </main>
 
-    <script src="/js/route.js"></script>
-    <script src="/js/photos.js"></script>
-    <script src="/js/videos.js"></script>
     <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="/js/plugins.js"></script>
+    <script src="/js/helpers.js"></script>
     <script src="/js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
