--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <body class="body-home">
     <header>
       <div class="logo-wrapper">
-        <a href="index.html" class="link logo" id="desktop"> dafna szleifer </a>
-        <a href="index.html" class="link logo" id="mobile"> dafna </a>
+        <a href="/" class="link logo" id="desktop"> dafna szleifer </a>
+        <a href="/" class="link logo" id="mobile"> dafna </a>
       </div>
-      <a href="fotos.html" class="link azul">fotos</a>
+      <a href="/fotos" class="link azul">fotos</a>
     </header>
 
     <main class="main-home">
@@ -39,16 +39,17 @@
     </main>
 
     <footer>
-      <a href="info.html" class="link rojo">info</a>
+      <a href="/info" class="link rojo">info</a>
       <a href="#" class="link ingles">EN</a>
     </footer>
 
-    <script src="/js/route.js"></script>
     <script src="/js/photos.js"></script>
     <script src="/js/videos.js"></script>
     <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="/js/plugins.js"></script>
+    <script src="/js/helpers.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/page-home.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
