--- a/fotos.html
+++ b/fotos.html
@@ -27,10 +27,8 @@
   <body>
     <header>
       <div class="logo-wrapper">
-        <a href="/index.html" class="link logo" id="desktop">
-          dafna szleifer
-        </a>
-        <a href="/index.html" class="link logo" id="mobile"> dafna </a>
+        <a href="/" class="link logo" id="desktop"> dafna szleifer </a>
+        <a href="/" class="link logo" id="mobile"> dafna </a>
       </div>
       <div class="link azul fotos">
         <a href="#todas"> fotos</a>
@@ -133,16 +131,16 @@
     <div class="flecha"></div>
 
     <footer>
-      <a href="/info.html" class="link rojo">info</a>
+      <a href="/info" class="link rojo">info</a>
       <a href="#" class="link ingles">EN</a>
     </footer>
 
     <script src="/js/route.js"></script>
     <script src="/js/photos.js"></script>
-    <script src="/js/videos.js"></script>
     <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="/js/plugins.js"></script>
+    <script src="/js/helpers.js"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/page-photos.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
     <script>
