--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
     <main class="main-home">
       <div id="custom-cursor"></div>
-      <div class="video-wrapper"></div>
+      <div class="video-wrapper">
+        <video autoplay muted playsinline src="" type="video/mp4"></video>
+      </div>
     </main>
 
     <footer>
