--- a/fotos.html
+++ b/fotos.html
@@ -116,15 +116,15 @@
 
     <div id="carousel-window">
       <div id="carousel">
-        <!-- <button class="carousel-navigation" data-direction="previous">
-          &#8679;
-        </button> -->
+        <div></div>
         <div class="slide-wrapper"></div>
-        <!-- <button class="carousel-navigation" data-direction="next">
-          &#8679;
-        </button> -->
+        <div class="navigation">
+          <button
+            class="carousel-navigation"
+            data-direction="previous"></button>
+          <button class="carousel-navigation" data-direction="next"></button>
+        </div>
       </div>
-      <!-- &#215; -->
       <div id="carousel-close"></div>
     </div>
 
