--- a/info.html
+++ b/info.html
@@ -36,7 +36,7 @@
     </header>
 
     <main class="main-info">
-      <p id="bio">
+      <p class="bio es">
         Nací en Buenos Aires en 1994. Lorem ipsum dolor sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -52,6 +52,24 @@
           >@dafnadafne</a
         >
       </p>
+
+      <p class="bio en">
+        I WAS BORN. ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+        ex ea commodo consequat.
+        <br />
+        <br />
+        Para impresiones, trabajos, pedidos, etc. escribime a
+        <a href="#" id="mail">dafiszlei@gmail.com</a>
+        <br />
+        <br />
+        instagram:
+        <a target="_blank" href="https://www.instagram.com/dafnadafne/" id="ig"
+          >@dafnadafne</a
+        >
+      </p>
+
       <div class="foto-bio">
         <img src="images/bio.jpg" alt="dafna niña" />
       </div>
@@ -60,6 +78,7 @@
     <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/js/helpers.js"></script>
+    <script src="/js/localization.js"></script>
     <script src="/js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
