--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a href="/" class="link logo" id="desktop"> dafna szleifer </a>
         <a href="/" class="link logo" id="mobile"> dafna </a>
       </div>
-      <a href="/fotos" class="link azul">fotos</a>
+      <a href="/fotos" class="link azul" data-loc-key="fotos">fotos</a>
     </header>
 
     <main class="main-home">
@@ -42,7 +42,8 @@
 
     <footer>
       <a href="/info" class="link rojo">info</a>
-      <a href="#" class="link ingles">EN</a>
+      <a href="#" class="link locale es" data-loc="en">EN</a>
+      <a href="#" class="link locale en" data-loc="es">ES</a>
     </footer>
 
     <script src="/js/photos.js"></script>
@@ -50,6 +51,7 @@
     <script src="/js/vendor/modernizr-3.11.2.min.js"></script>
     <script src="/js/plugins.js"></script>
     <script src="/js/helpers.js"></script>
+    <script src="/js/localization.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/page-home.js"></script>
 
